# tauri-leptos-example

./: .gitattributes  .gitignore  Cargo.toml  README.md  rust-analyzer.toml
apps/src-tauri/: Cargo.toml  Tauri.toml
apps/src-tauri/capabilities/: default.json
apps/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/src-ui/: Cargo.toml  Trunk.toml  index.html
apps/src-ui/src/: app.rs  lib.rs  main.rs
apps/src-ui/src/components/: counter.rs  event_backend.rs  event_frontend.rs  greet.rs  mod.rs  theme.rs
apps/src-ui/tests/: counter.rs
apps/src-ui/tests/common/: mod.rs
