[package]
name = "src-tauri"
version = "0.1.0"
edition.workspace = true

[lib]
name = "src_tauri_lib"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = ["config-toml"] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0-rc", features = ["config-toml"] }
tauri-plugin-shell = "2.0.0-rc"
