[package]
name = "src-tauri"
version = "0.4.3"
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2.0", features = ["config-toml"] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = ["config-toml"] }
tauri-plugin-shell = "2.0"
