[package]
name = "src-ui"
version = "0.2.9"
edition.workspace = true

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7.0", features = ["csr"] }
# thaw = { version = "0.4.0-beta3"}

[dependencies.thaw]
git = "https://github.com/thaw-ui/thaw"
branch = "main"

[dev-dependencies]
wasm-bindgen = "0.2.97"
wasm-bindgen-test = "0.3.47"

[dev-dependencies.web-sys]
version = "0.3.74"
features = ["HtmlElement", "XPathResult"]
