[package]
name = "src-ui"
version = "0.2.10"
edition.workspace = true

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.2", features = ["csr"] }

[dependencies.thaw]
git = "https://github.com/thaw-ui/thaw"
branch = "thaw/v0.5"

[dev-dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-test = "0.3.50"

[dev-dependencies.web-sys]
version = "0.3.77"
features = ["HtmlElement", "XPathResult"]
