[package]
name = "src-ui"
version = "0.3.9"
edition.workspace = true

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
leptos = { version = "0.8.2", features = ["csr"] }
log = "0.4.27"
serde = { version = "1", features = ["derive"] }

[dependencies.thaw]
git = "https://github.com/thaw-ui/thaw"
branch = "thaw/v0.5"

[dependencies.tauri-sys]
git = "https://github.com/JonasKruckenberg/tauri-sys"
branch = "v2"
features = ["all"]

[dev-dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-test = "0.3.50"

[dev-dependencies.web-sys]
version = "0.3.77"
features = ["HtmlElement", "XPathResult"]
